--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -1,3 +1,78 @@
-<p>
-  member-list works!
-</p>
+<div class="container-fluid mt-4">
+  <div class="row mt-4 ml-4">
+    <div class="col-6">
+      <div class="card mb-3" style="max-width: 530px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="assets/images/img1.jpg" class="card-img" alt="assets/images/img1.jpg">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4 class="card-title">Public Profile</h4>
+              <p class="card-text font-weight-light">Name: <span class="font-weight-bold">Navneet Singh</span></p>
+              <p class="card-text font-weight-light">Age: <span class="font-weight-bold">27</span></p>
+              <p class="card-text font-weight-light">Email: <span class="font-weight-bold">Nav@gmail.com</span></p>
+              <p class="card-text text-muted">Last Active 1 min ago</p>
+              <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+              <button class="btn btn-primary float-right mb-1">View Profile</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="card mb-3" style="max-width: 530px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="assets/images/img1.jpg" class="card-img" alt="assets/images/img1.jpg">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Private Profile</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <img src="assets/images/img1.jpg" style="margin-left: 603px !important" alt="..." class="rounded-circle mx-auto d-block">
+  </div>
+  <div class="row mt-4 ml-4">
+    <div class="col-6">
+      <div class="card mb-3" style="max-width: 530px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="assets/images/img1.jpg" class="card-img" alt="assets/images/img1.jpg">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="card mb-3" style="max-width: 530px;">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="assets/images/img1.jpg" class="card-img" alt="assets/images/img1.jpg">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
