--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -67,8 +67,12 @@
       <label class="form-check-label" for="inlineRadio2">Female</label>
     </div>
     <div class="form-check form-check-inline">
-      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="3" [(ngModel)]="model.gender">
-      <label class="form-check-label" for="inlineRadio2">Other</label>
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="3" [(ngModel)]="model.gender">
+      <label class="form-check-label" for="inlineRadio3">Not Sure</label>
+    </div> 
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="4" [(ngModel)]="model.gender">
+      <label class="form-check-label" for="inlineRadio4">Rather Not Say</label>
     </div> 
  </div>
   
